improved log for debug